--- a/frontendUser/templates/base.html
+++ b/frontendUser/templates/base.html
@@ -5,7 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Frontend Usuario - Base de Datos Masivas</title>
+    <link rel="icon" type="image/svg+xml" href="/static/images/logo.svg">
     <link rel="stylesheet" href="/static/css/styles.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=database" />
 </head>
 
 <body>
